Bug-22730: SKU's title will be truncated when narrow the history page.

--- a/app/styles/directives/ctx-line-chart.less
+++ b/app/styles/directives/ctx-line-chart.less
@@ -6,12 +6,6 @@
 .line-title {
   font-size: 16px;
   font-family: 'citrixsans-regular';
-  text-anchor: middle;
-  white-space: nowrap;
-  -ms-text-overflow: ellipsis;
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  overflow: hidden;
 }
 
 .line-axis path{
